--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,11 @@ title: Ivan Tkachenko # your name (or website title) here
 logo: "HY9dU3luvl.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
-  <br>Hello<br>
+  Hello
+  <br><br>
   Second description 
-  <br>its me<br>
+  Its me
+  <br><br>
   <a href="https://www.linkedin.com/in/ivan-tkachenko-a79a76124/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
