--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Ivan Tkachenko # your name (or website title) here
 logo: "HY9dU3luvl.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  First description  Hi
   Hello
   <br><br>
   Second description 
