--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Ivan Tkachenko # your name (or website title) here
 logo: "HY9dU3luvl.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description  Hi
-  Hello
+  Highly motivated self-starter with strong interpersonal and persuasive communication skills. Strong analytical and organizational abilities with quick and self-learning abilities. Extensive practical knowledge MicroStrategy, QlikView, Tableau, Google Data Studio, SQL, Snowflake (SaaS), VMware Horizon (DaaS), AWS. 
+  
   <br><br>
   Second description 
   Its me
