--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   Second description 
   Its me
   <br><br>
-  <a href="https://www.linkedin.com/in/ivan-tkachenko-a79a76124/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/ivan-tkachenko-a79a76124/">LinkedIn </a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
