--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "HY9dU3luvl.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Highly motivated self-starter with strong interpersonal and persuasive communication skills. Strong analytical and organizational abilities with quick and self-learning abilities. Extensive practical knowledge MicroStrategy, QlikView, Tableau, Google Data Studio, SQL, Snowflake (SaaS), VMware Horizon (DaaS), AWS. 
   <br><br>
-  Second description 
+  #Second description 
   Its me
   <br><br>
   <a href="https://www.linkedin.com/in/ivan-tkachenko-a79a76124/">LinkedIn </a> 
