--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ description: > # your text below (remove <br> elements if you don't need line br
   <a href="https://www.linkedin.com/in/ivan-tkachenko-a79a76124/">LinkedIn </a> 
    
  theme: jekyll-theme-minimal
-## google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+ google_analytics: UA-000000-0 # your Google Analytics tracking ID here
